# macbook-lid-angle-game

./: CONTRIBUTING.md  LICENSE  README.md
lid-pong/: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  build-release.sh
lid-pong/src/: LidPong.cpp  Sensor.cpp  Sensor.h
mac-angle/: .gitignore  CMakeLists.txt  MacAngleConfig.cmake.in  README.md  angle.cpp  angle.h  build.sh  example  example.cpp
